--- a/app/src/main/res/drawable/bg_button.xml
+++ b/app/src/main/res/drawable/bg_button.xml
@@ -1,4 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle" >
+
+    <corners
+        android:bottomLeftRadius="23dp"
+        android:bottomRightRadius="23dp"
+        android:topLeftRadius="23dp"
+        android:topRightRadius="23dp" />
+    <solid android:color="@color/black" />
+
+</shape>
