--- a/app/src/main/res/drawable/bg_edittext.xml
+++ b/app/src/main/res/drawable/bg_edittext.xml
@@ -1,6 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:width="1dp" android:color="@color/et_border" />
-    <solid android:color="@color/bg_white" />
+    <stroke android:width="1dp" android:color="@color/black" />
+    <solid android:color="@color/white" />
     <corners android:radius="15dp" />
     <padding android:left="2dp" android:top="2dp" android:right="2dp" android:bottom="2dp" />
 </shape>
