--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/searchFragment">
+
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.mrt.foursquare_api_sample.ui.main.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
-
-        <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+        android:id="@+id/searchFragment"
+        android:name="com.mrt.foursquare_api_sample.ui.search.SearchFragment"
+        android:label="fragment_search"
+        tools:layout="@layout/fragment_search" />
+    <fragment
+        android:id="@+id/placeListFragment"
+        android:name="com.mrt.foursquare_api_sample.ui.placelist.PlaceListFragment"
+        android:label="PlaceListFragment" >
+        <argument
+            android:name="text"
+            app:argType="string" />
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.mrt.foursquare_api_sample.ui.main.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
+        android:id="@+id/placeDetailFragment"
+        android:name="com.mrt.foursquare_api_sample.ui.detail.PlaceDetailFragment"
+        android:label="PlaceDetailFragment" >
+        <argument
+            android:name="fsq_id"
+            app:argType="string" />
 
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
     </fragment>
 </navigation>
